--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.datasource.password=Quang123@
 
 spring.jpa.hibernate.ddl-auto=update
 
-spring.web.resources.static-locations=classpath:/static/
+spring.web.resources.static-locations=classpath:/static/,file:./image/
+
+
 
 
 
