--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,14 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.web.resources.static-locations=classpath:/static/,file:./image/
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nvq3401@gmail.com
+spring.mail.password=ixfh fjbt ombq ccmg
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 
 
 
